# OOP_lab6

./: CMakeLists.txt  README.md  main.cpp
include/: dragon.hpp  knight.hpp  npc.hpp  pegasus.hpp
src/: dragon.cpp  knight.cpp  npc.cpp  pegasus.cpp
